# megafix

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yc.yml  docker-compose.yml  pyproject.toml  requirements.txt
deploy/nginx/: entrypoint.sh
deploy/nginx/templates/: http.conf.template  https.conf.template
src/agent_cli/: __main__.py  cli.py
src/agent_core/: edit_engine.py  git_ops.py  github_client.py  llm.py  logging_setup.py  patch_engine.py  runner.py  settings.py  workspace.py
src/agent_core/agents/: code_agent_base.py  dummy_code_agent.py  llm_code_agent.py  reviewer.py
src/agent_core/orchestrator/: __init__.py  langgraph_cycle.py  run_issue_graph.py
src/agent_core/schemas/: __init__.py  tool_schemas.py
src/agent_core/tools/: __init__.py  check_tools.py  context_tools.py  edit_tools.py  patch_tools.py  registry.py
src/megafix/: __init__.py
src/megafix/code_agent/: __init__.py  application.py  check_tools.py  context_tools.py  edit_tools.py  edits_engine.py  orchestration.py  patch_tools.py  patches_engine.py  tool_registry.py
src/megafix/infra/: git_ops.py  github_client.py  llm_clients.py  workspace.py
src/megafix/interfaces/: __init__.py  cli.py  cli_parsing.py  (+2 more)
src/reviewer_agent/: actions_logs.py  review_agent.py  runner.py
src/webhook_server/: main.py
tests/: test_check_tools.py  test_context_tools.py  test_edit_engine.py  test_edit_tools.py  test_langgraph_cycle.py  test_parsing.py  test_patch_engine.py  test_review_agent_unit.py  test_reviewer_runner.py  test_run_issue_graph.py  test_runner.py  test_tool_schemas_contract.py
(+9 files in other folders)
