[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src"]
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agent_cli", "reviewer_agent"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
files = ["src"]
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "git",
  "github",
  "jwt",
  "requests",
  "langchain",
  "langchain.*",
  "langchain_core",
  "langchain_core.*",
  "langchain_openai",
  "langchain_openai.*",
  "langgraph",
  "langgraph.*",
]
ignore_missing_imports = true

[project]
name = "megafix"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "gitpython>=3.1.46",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "pygithub>=2.8.1",
    "pyjwt[crypto]>=2.11.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.1",
    "requests>=2.32.5",
    "rq>=2.6.1",
    "typer>=0.23.1",
    "uvicorn>=0.40.0",
]

[project.scripts]
megafix = "agent_cli.cli:main"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
